--- a/React/R001_FirstProject/src/index.css
+++ b/React/R001_FirstProject/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+.shakir {
+    font-size: 100px;
+    color: rgb(76, 0, 255);
+    background-color: yellow;
+    text-align: center;
+}
