--- a/React/R001_FirstProject/src/index.css
+++ b/React/R001_FirstProject/src/index.css
@@ -1,8 +1,3 @@
 @import "tailwindcss";
-
-.shakir {
-    font-size: 100px;
-    color: rgb(76, 0, 255);
-    background-color: yellow;
-    text-align: center;
-}
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
